fix missing documentation
